deploy: 275d9e8d0b46fbf0008b04c5aff61a51f791ba21

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -506,6 +506,9 @@
   .max-w-\[80\%\] {
     max-width: 80%;
   }
+  .max-w-\[90\%\] {
+    max-width: 90%;
+  }
   .max-w-\[1200px\] {
     max-width: 1200px;
   }
