--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -459,6 +459,9 @@
   .h-64 {
     height: calc(var(--spacing) * 64);
   }
+  .h-\[20px\] {
+    height: 20px;
+  }
   .h-\[25px\] {
     height: 25px;
   }
@@ -1161,6 +1164,9 @@
   .text-purple-600 {
     color: var(--color-purple-600);
   }
+  .text-purple-700 {
+    color: var(--color-purple-700);
+  }
   .text-purple-800 {
     color: var(--color-purple-800);
   }
@@ -1169,9 +1175,6 @@
   }
   .text-red-500 {
     color: var(--color-red-500);
-  }
-  .text-red-600 {
-    color: var(--color-red-600);
   }
   .text-white {
     color: var(--color-white);
@@ -1575,6 +1578,11 @@
   .md\:left-24 {
     @media (width >= 48rem) {
       left: calc(var(--spacing) * 24);
+    }
+  }
+  .md\:mt-4 {
+    @media (width >= 48rem) {
+      margin-top: calc(var(--spacing) * 4);
     }
   }
   .md\:mt-14 {
